--- a/index1.html
+++ b/index1.html
@@ -3,45 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
     <title>Welcome to SchoolKids Learning Platform!</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #4CAF50;
+            background-color: white;
         }
         .header {
-            background-color: #4CAF50;
-            color: #ffffff;
-            padding: 20px;
-            margin-bottom: 30px;
+            background-color: #360F3E;
+            color: white;
+            padding: 50px;
         }
         .header h1 {
             font-size: 50px;
-            margin-bottom: 20px;
+            font-family: "Chelsea Market", system-ui;
         }
         .header p {
-            font-size: 25px;
-            margin-bottom: 10px;
+            font-size: 20px;
         }
         .header img {
-            max-width: 30%;
+            max-width: 25%;
             height: auto;
-            margin-bottom: 20px;
+        }
+        #navbar {
+            overflow: hidden;
+            background-color: #1CC2CD;
+            background-size: 7%;
+        }
+        #navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 20px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        #navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        #navbar a.active {
+            background-color: #1CC2CD;
+            color: white;
         }
         .button-container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 5px;
+        }
+        .button-item {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            width: 70%;
+            text-align: left;
+        }
+        .button-item img {
+            max-width: 400px; /* Larger size for icons */
+            height: auto;
+            transition: transform 0.2s; /* Add transition for smooth zoom */
+        }
+        .button-item img:hover {
+            transform: scale(1.5); /* Zoom effect on hover */
         }
         .big-button {
-            background-color: #ffffff;
-            color: #4CAF50;
-            padding: 60px 80px;
+            background-color: #1CC2CD;
+            color: black;
+            padding: 20px 40px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -51,38 +86,191 @@
             border-radius: 4px;
             transition: background-color 0.3s, color 0.3s;
             box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
+            flex-grow: 1;
         }
         .big-button:hover {
             background-color: #e2d80d;
             color: #ffffff;
         }
         .footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
             text-align: center;
-            margin-top: 20px;
-            font-size: 15px;
-            color: #eae9e9;
+        }
+        .team-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 100px; /* Adjust the gap between cards */
+            margin-top: 40px;
+            margin-bottom: 80px; /* Add margin to the bottom */
+        }
+        .flip-card {
+            background-color: transparent;
+            width: 150px;
+            height: 180px; /* Adjust height as needed */
+            perspective: 1000px;
+        }
+        .flip-card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+        .flip-card:hover .flip-card-inner {
+            transform: rotateY(180deg);
+        }
+        .flip-card-front, .flip-card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 20px;
+        }
+        .flip-card-front {
+            background-color: #bbb;
+            color: black;
+        }
+        .flip-card-back {
+            background-color: #2980b9;
+            color: white;
+            transform: rotateY(180deg);
+        }
+        .flip-card img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
 
+<div id="navbar">
+    <a class="active" href="index.html">Home</a>
+    <a href="quiz.html">Quizzes</a>
+    <a href="forum.html">Forum Discussion</a>
+    <a href="content.html">Content Sharing</a>
+    <a href="resources.html">Book Link</a>
+</div>
+
 <div class="header">
     <img src="Images/kids1.png" alt="SchoolKids" />
-    <h1>Welcome to the SchoolKids Learning Platform!</h1>
+    <h1>Welcome to the Kids e-Learning Platform!</h1>
     <p>Explore interactive activities to enhance learning for children.</p>
     <p>Choose from a variety of engaging options to suit your child's interests.</p>
 </div>
 
-<div class="button-container">
-    <a href="quiz.html" class="big-button">Quizzes</a>
-    <a href="forum.html" class="big-button">Forum Discussion</a>
-    <a href="content.html" class="big-button">Content Sharing</a>
-    <a href="resources.html" class="big-button">Book Link</a>
+<div class="content">
+    <div class="button-container">
+        <div class="button-item">
+            <img src="Images/quiz.png" alt="Quizzes Icon" />
+            <div>
+                <h2>Quizzes</h2>
+                <p>Challenge your child's knowledge with interactive quizzes that cover various subjects.</p>
+                <a href="quiz.html" class="big-button">Click here to explore more</a>
+            </div>
+        </div>
+        <div class="button-item">
+            <img src="Images/forum.png" alt="Forum Icon" />
+            <div>
+                <h2>Forum Discussion</h2>
+                <p>Engage in discussions with other parents and educators to exchange ideas and tips.</p>
+                <a href="forum.html" class="big-button">Click here to explore more</a>
+            </div>
+        </div>
+        <div class="button-item">
+            <img src="Images/content.png" alt="Content Sharing Icon" />
+            <div>
+                <h2>Content Sharing</h2>
+                <p>Discover and share educational resources and materials that can aid in learning.</p>
+                <a href="content.html" class="big-button">Click here to explore more</a>
+            </div>
+        </div>
+        <div class="button-item">
+            <img src="Images/book.png" alt="Book Link Icon" />
+            <div>
+                <h2>Book Link</h2>
+                <p>Access recommended reading materials and books to encourage reading habits.</p>
+                <a href="resources.html" class="big-button">Click here to explore more</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="footer">
+    <div class="team-container">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="Images/alya.jpg" alt="Aliff">
+                </div>
+                <div class="flip-card-back">
+                    <h3>Aliff Aizuddin Bin Abdul Aziz</h3>
+                    <p>Back-End Developer</p>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="Images/alya.jpg" alt="Najmi">
+                </div>
+                <div class="flip-card-back">
+                    <h3>Muhammad Najmi Zulhusni Bin Mohd Sapuan</h3>
+                    <p>Project Director</p>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="Images/alya.jpg" alt="Misya">
+                </div>
+                <div class="flip-card-back">
+                    <h3>Misya Syafiqah Binti Mohd Safian</h3>
+                    <p>Front-End Developer</p>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="Images/alya.jpg" alt="Alya">
+                </div>
+                <div class="flip-card-back">
+                    <h3>Nor Alya Binti Mohamad Nor</h3>
+                    <p>UI/UX Developer</p>
+                </div>
+            </div>
+        </div>
+        <!-- Add more flip-card elements for additional team members -->
+    </div>
     <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
 </div>
+
+<script>
+    window.onscroll = function() {myFunction()};
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+    function myFunction() {
+        if (window.pageYOffset >= sticky) {
+            navbar.classList.add("sticky")
+        } else {
+            navbar.classList.remove("sticky");
+        }
+    }
+</script>
 
 </body>
 </html>
