--- a/certificate.html
+++ b/certificate.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificate of Completion</title>
     <link rel="stylesheet" href="certificate.css">
+    <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
+
 </head>
 <body>
     <div class="certificate-container">
