--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
     <title>Welcome to SchoolKids Learning Platform!</title>
+    <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
+
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
