--- a/index1.html
+++ b/index1.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <title>Welcome to SchoolKids Learning Platform!</title>
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
+        @font-face {
+        font-family: "Kiddos";
+        src: url("Font/kiddos.ttf");
+        }
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: "Patrick Hand", cursive;
             text-align: center;
+            font-size: 20px;
             margin: 0;
             padding: 0;
             background-color: white;
@@ -18,14 +23,14 @@
         .header {
             background-color: #360F3E;
             color: white;
-            padding: 50px;
+            padding: 20px 50px; 
         }
         .header h1 {
-            font-size: 50px;
-            font-family: "Chelsea Market", system-ui;
+            font-size: 60px;
+            font-family: "Kiddos";
         }
         .header p {
-            font-size: 20px;
+            font-size: 23px;
         }
         .header img {
             max-width: 25%;
@@ -35,13 +40,16 @@
             overflow: hidden;
             background-color: #1CC2CD;
             background-size: 7%;
+            position: sticky;
+            top: 0;
+            z-index: 1000; 
         }
         #navbar a {
             float: left;
             display: block;
             color: #f2f2f2;
             text-align: center;
-            padding: 20px 16px;
+            padding: 10px 16px;
             text-decoration: none;
             font-size: 17px;
         }
@@ -57,7 +65,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
             margin-top: 5px;
         }
         .button-item {
@@ -68,12 +75,12 @@
             text-align: left;
         }
         .button-item img {
-            max-width: 400px; /* Larger size for icons */
+            max-width: 500px; 
             height: auto;
-            transition: transform 0.2s; /* Add transition for smooth zoom */
+            transition: transform 0.2s; 
         }
         .button-item img:hover {
-            transform: scale(1.5); /* Zoom effect on hover */
+            transform: scale(1.5); 
         }
         .big-button {
             background-color: #1CC2CD;
@@ -87,15 +94,20 @@
             border: none;
             border-radius: 4px;
             transition: background-color 0.3s, color 0.3s;
-            box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
             flex-grow: 1;
         }
         .big-button:hover {
-            background-color: #e2d80d;
+            background-color: #B383FE;
             color: #ffffff;
         }
+        .divider {
+            width: 80%;
+            height: 2px;
+            background-color: #ddd;
+            margin: 20px auto;
+        }
         .footer {
-            background-color: #333;
+            background-color: #1CC2CD;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -104,14 +116,15 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            gap: 100px; /* Adjust the gap between cards */
+            gap: 100px;
             margin-top: 40px;
-            margin-bottom: 80px; /* Add margin to the bottom */
+            margin-bottom: 80px; 
+            border-radius: 15px;
         }
         .flip-card {
             background-color: transparent;
             width: 150px;
-            height: 180px; /* Adjust height as needed */
+            height: 180px; 
             perspective: 1000px;
         }
         .flip-card-inner {
@@ -139,18 +152,18 @@
             padding: 20px;
         }
         .flip-card-front {
-            background-color: #bbb;
-            color: black;
+            background-color: #360F3E;
+            border-radius: 4px;
         }
         .flip-card-back {
-            background-color: #2980b9;
+            background-color: #360F3E;
             color: white;
             transform: rotateY(180deg);
+            border-radius: 4px;
         }
         .flip-card img {
             width: 150px;
-            height: 150px;
-            border-radius: 50%;
+            height: 180px;
             object-fit: cover;
             margin-bottom: 10px;
         }
@@ -159,7 +172,7 @@
 <body>
 
 <div id="navbar">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="index1.html">Home</a>
     <a href="quiz.html">Quizzes</a>
     <a href="forum.html">Forum Discussion</a>
     <a href="content.html">Content Sharing</a>
@@ -183,6 +196,7 @@
                 <a href="quiz.html" class="big-button">Click here to explore more</a>
             </div>
         </div>
+        <div class="divider"></div>
         <div class="button-item">
             <img src="Images/forum.png" alt="Forum Icon" />
             <div>
@@ -191,6 +205,7 @@
                 <a href="forum.html" class="big-button">Click here to explore more</a>
             </div>
         </div>
+        <div class="divider"></div>
         <div class="button-item">
             <img src="Images/content.png" alt="Content Sharing Icon" />
             <div>
@@ -199,6 +214,7 @@
                 <a href="content.html" class="big-button">Click here to explore more</a>
             </div>
         </div>
+        <div class="divider"></div>
         <div class="button-item">
             <img src="Images/book.png" alt="Book Link Icon" />
             <div>
@@ -215,7 +231,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="Images/alya.jpg" alt="Aliff">
+                    <img src="Images/aliff.png" alt="Aliff">
                 </div>
                 <div class="flip-card-back">
                     <h3>Aliff Aizuddin Bin Abdul Aziz</h3>
@@ -226,7 +242,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="Images/alya.jpg" alt="Najmi">
+                    <img src="Images/najmi.png" alt="Najmi">
                 </div>
                 <div class="flip-card-back">
                     <h3>Muhammad Najmi Zulhusni Bin Mohd Sapuan</h3>
@@ -237,7 +253,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="Images/alya.jpg" alt="Misya">
+                    <img src="Images/misya.jpeg" alt="Misya">
                 </div>
                 <div class="flip-card-back">
                     <h3>Misya Syafiqah Binti Mohd Safian</h3>
@@ -256,9 +272,8 @@
                 </div>
             </div>
         </div>
-        <!-- Add more flip-card elements for additional team members -->
     </div>
-    <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
+    <p>&copy; 2024 Kids e-Learning.</p>
 </div>
 
 <script>
