--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <title>Welcome to SchoolKids Learning Platform!</title>
+    <title>Welcome to Kids e-Learning Platform!</title>
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
@@ -170,7 +170,7 @@
     </style>
 </head>
 <body>
-
+    
 <div id="navbar">
     <a class="active" href="index1.html">Home</a>
     <a href="quiz.html">Quizzes</a>
@@ -288,6 +288,5 @@
         }
     }
 </script>
-
 </body>
 </html>
