--- a/quiz.html
+++ b/quiz.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SchoolKids Learning Platform</title>
+    <title>Quizzes - Welcome to Kids e-Learning Platform!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
-
 </head>
 <body>
+    <div id="navbar">
+        <a href="index1.html">Home</a>
+        <a class="active" href="quiz.html">Quizzes</a>
+        <a href="forum.html">Forum Discussion</a>
+        <a href="content.html">Content Sharing</a>
+        <a href="resources.html">Book Link</a>
+    </div>
     <div class="header">
         <h1>Welcome to the SchoolKids Learning Platform!</h1>
         <p>Explore interactive activities to learn about various topics.</p>
