--- a/forum.html
+++ b/forum.html
@@ -3,17 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum Discussion - SchoolKids Learning Platform</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <title>Forum Discussion - Welcome to Kids e-Learning Platform!</title>
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
+            @font-face {
+            font-family: "Kiddos";
+            src: url("Font/kiddos.ttf");
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Patrick Hand", cursive;
             text-align: center;
+            font-size: 20px;
             margin: 0;
             padding: 0;
-            background-color: #4CAF50;
+            background-color: #f5f5f5;
+        }
+        #navbar {
+            overflow: hidden;
+            background-color: #1CC2CD;
+            background-size: 7%;
+            position: sticky;
+            top: 0;
+            z-index: 1000; 
+        }
+        #navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 10px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        #navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        #navbar a.active {
+            background-color: #1CC2CD;
+            color: white;
         }
         .header {
             background-color: #4CAF50;
@@ -118,6 +148,13 @@
     </style>
 </head>
 <body>
+    <div id="navbar">
+        <a href="index1.html">Home</a>
+        <a href="quiz.html">Quizzes</a>
+        <a class="active" href="forum.html">Forum Discussion</a>
+        <a href="content.html">Content Sharing</a>
+        <a href="resources.html">Book Link</a>
+    </div>
 
 <div class="header">
     <img src="Images/kids1.png" alt="SchoolKids" />
