--- a/certificate.html
+++ b/certificate.html
@@ -6,8 +6,12 @@
     <title>Certificate of Completion</title>
     <link rel="stylesheet" href="certificate.css">
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
-
 </head>
+
+<div id="navbar">
+    <a href="index1.html" ss="clamain-page-button">Back to Home Page</a>
+</div>
+
 <body>
     <div class="certificate-container">
         <div class="left-section">
