--- a/forum.html
+++ b/forum.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forum Discussion| Kids e-Learning </title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <title>Forum Discussion - Welcome to Kids e-Learning Platform!</title>
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
@@ -149,7 +149,7 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="index1.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="quiz.html">Quizzes</a>
         <a class="active" href="forum.html">Forum Discussion</a>
         <a href="content.html">Content Sharing</a>
