--- a/index1.html
+++ b/index1.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< Updated upstream
+    <title>Home | Kids e-Learning </title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <title>Welcome to Kids e-Learning Platform!</title>
-=======
-    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
-    <title>Kids E-Learning</title>
->>>>>>> Stashed changes
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
