--- a/content.html
+++ b/content.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content Sharing | Kids e-Learning </title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <title>Content Sharing - Welcome to Kids e-Learning Platform!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
