Update Content Sharing

--- a/content.html
+++ b/content.html
@@ -47,7 +47,7 @@
             color: white;
         }
         .header {
-            background-color: #4CAF50;
+            background-color: #1d2431;
             color: #ffffff;
             padding: 20px;
             margin-bottom: 30px;
@@ -55,15 +55,18 @@
         .header h1 {
             font-size: 50px;
             margin-bottom: 20px;
+            text-align: left;
         }
         .header p {
             font-size: 25px;
             margin-bottom: 10px;
+            text-align: left;
         }
         .header img {
-            max-width: 20%;
+            max-width: 150px;
             height: auto;
-            margin-bottom: 20px;
+            margin-right: 30px;
+            margin-left: 380px;
         }
         .section {
             margin: 20px auto;
@@ -104,20 +107,20 @@
             box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
         }
         .big-button:hover {
-            background-color: #e2d80d;
+            background-color: #000000;
             color: #ffffff;
         }
         .content-item {
             margin: 20px auto;
             max-width: 600px;
             padding: 20px;
-            background: #4caf50;
+            background: #0324e07e;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
             text-align: left;
         }
         .content-item h3 {
-            color: white;
+            color: rgb(255, 255, 255);
         }
         .content-item p {
             margin: 10px 0;
@@ -129,12 +132,6 @@
             border: none;
             border-radius: 8px;
         }
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 15px;
-            color: #eae9e9;
-        }
     </style>
 </head>
 <body>
@@ -145,34 +142,33 @@
         <a class="active" href="content.html">Content Sharing</a>
         <a href="resources.html">Book Link</a>
     </div>
-<div class="header">
-    <img src="Images/kids1.png" alt="SchoolKids" />
-    <h1>Welcome to the SchoolKids Learning Platform!</h1>
-    <p>Share and explore content related to various topics.</p>
-</div>
 
-<div class="section">
+    <div class="header">
+        <img src="Images/content.jpg" alt="SchoolKids" />
+        <h1>Stay Informed with Us</h1>
+        <p>Get free access to the latest content across diverse topics</p>
+    </div>
+
+    <div class="section">
     <h2>Content Sharing</h2>
     <p>Discover resources and contribute your own content.</p>
 
     <!-- Example content items -->
     <div class="content-item">
-        <h3>Collection Popular for Kids</h3>
+        <h3>Entertainment</h3>
         <p>Didi & Friends</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/6_4cH3hA4ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="content-item">
-        <h3>Collection Popular for Kids</h3>
-        <p>Didi & Friends</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6_4cH3hA4ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+        <h3>Science</h3>
+        <p>Solar System</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/EB6FXDSTzhw?si=AMUTTLZpsbn0HvNz&amp;start=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
 
     <div class="content-item">
-        <h3>Collection Popular for Kids</h3>
-        <p>Didi & Friends</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6_4cH3hA4ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+        <h3>Math</h3>
+        <p>Basic Numbers in Daily Life</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Sj3X28r9oUU?si=YlxHXRDvH0IbswhU&amp;start=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
 
     <div class="button-container">
         <a href="#" class="big-button">Explore More Content</a>
@@ -180,7 +176,7 @@
 </div>
 
 <div class="footer">
-    <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
+    <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
 </div>
 
 </body>
