--- a/quiz.html
+++ b/quiz.html
@@ -191,7 +191,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>&copy; 2024 SchoolKids LLC. All Rights Reserved. CGMA, Universiti Teknologi Malaysia</p>
+        <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
