--- a/index1.html
+++ b/index1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Kids e-Learning </title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <title>Welcome to Kids e-Learning Platform!</title>
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
@@ -273,7 +273,7 @@
             </div>
         </div>
     </div>
-    <p>&copy; 2024 Kids e-Learning.</p>
+    <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
 </div>
 
 <script>
