--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Link | Kids e-Learning </title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
@@ -171,7 +173,7 @@
 </div>
 
 <div class="footer">
-    <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
+    <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
 </div>
 
 <script>
