--- a/content2.html
+++ b/content2.html
@@ -132,6 +132,53 @@
             border: none;
             border-radius: 8px;
         }
+        .back-button {
+            margin-top: 20px;
+        }
+        .back-button a {
+            background-color: #2d22d494;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-size: 20px;
+            border-radius: 4px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .back-button a:hover {
+            background-color: #000000;
+            color: #ffffff;
+        }
+        .suggestions {
+            position: fixed;
+            top: 100px;
+            right: 0;
+            width: 250px;
+            padding: 20px;
+            background-color: #71757a;
+            color: white;
+            border-radius: 8px 0 0 8px;
+            box-shadow: -4px 0 8px rgba(0,0,0,0.1);
+        }
+        .suggestions h2 {
+            font-size: 18px;
+            margin-bottom: 10px;
+            text-align: center;
+            text-decoration: underline;
+        }
+        .suggestions ul {
+            list-style: none;
+            padding: 0;
+        }
+        .suggestions li {
+            margin: 10px 0;
+        }
+        .suggestions a {
+            color: #1CC2CD;
+            text-decoration: none;
+        }
+        .suggestions a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -150,30 +197,42 @@
     </div>
 
     <div class="section">
-    <h2>Content Sharing</h2>
+    <h2>More Content Sharing</h2>
     <p>Discover resources and contribute your own content.</p>
 
     <!-- Example content items -->
     <div class="content-item">
-        <h3>Entertainment</h3>
-        <p>Didi & Friends</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6_4cH3hA4ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3>Geography</h3>
+        <p>Animals</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9vQnKO_2kKk?si=iUL9-gbYcYWdcBQn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
     </div>
 
     <div class="content-item">
-        <h3>Science</h3>
-        <p>Solar System</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EB6FXDSTzhw?si=AMUTTLZpsbn0HvNz&amp;start=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
-
-    <div class="content-item">
-        <h3>Math</h3>
-        <p>Basic Numbers in Daily Life</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Sj3X28r9oUU?si=YlxHXRDvH0IbswhU&amp;start=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
-
-    <div class="button-container">
-        <a href="content2.html" class="big-button">Explore More Content</a>
+        <h3>Foreign Language</h3>
+        <p>Hello in Other Languages</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/472AnCrHYVs?si=JQ1nzzRSbZ4L3joL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
     </div>
 
+    <div class="content-item">
+        <h3>Arts</h3>
+        <p>Handmade Paper Craft</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ws6BR741ios?si=9DeMd0PVCTDTzR3Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+    </div>
+
+    <div class="back-button">
+        <a href="content.html">Back</a>
+    </div>
+</div>
+
+<div class="suggestions">
+    <h2>More Suggestions </h2>
+    <ul>
+        <li><a href="https://youtu.be/CYb26MFB9Og?feature=shared" target="_blank">BoBoiBoy Galaxy</a></li>
+        <li><a href="https://youtu.be/NgqrnwuGoJs?feature=shared" target="_blank">Omar dan Hana</a></li>
+        <li><a href="https://youtu.be/VmtmXK9CYQw?feature=shared" target="_blank">Upin & Ipin</a></li>
+        <li><a href="https://youtu.be/iATnV1BoSaI?feature=shared" target="_blank">CoComelon</a></li>
+        <li><a href="https://youtu.be/8Sa0GHvwBS0?feature=shared" target="_blank">Disney Junior</a></li>
+    </ul>
 </div>
 
 <div class="footer">
