--- a/index1.html
+++ b/index1.html
@@ -111,6 +111,7 @@
             color: #fff;
             padding: 20px;
             text-align: center;
+            font-size: 15px;
         }
         .team-container {
             display: flex;
