--- a/forum.html
+++ b/forum.html
@@ -47,23 +47,24 @@
             color: white;
         }
         .header {
-            background-color: #4CAF50;
-            color: #ffffff;
-            padding: 20px;
-            margin-bottom: 30px;
+            background-color: #360F3E;
+            color: white;
+            padding: 20px 30px; 
         }
         .header h1 {
-            font-size: 50px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            font-family: "Kiddos";
+            text-align: left;
         }
         .header p {
-            font-size: 25px;
-            margin-bottom: 10px;
+            font-size: 23px;
+            text-align: left;
         }
+
         .header img {
-            max-width: 10%;
+            float: left;
+            max-width: 150px; 
             height: auto;
-            margin-bottom: 20px;
         }
         .section {
             margin: 20px auto;
@@ -151,8 +152,8 @@
     </div>
 
     <div class="header">
-        <img src="Images/kids1.png" alt="SchoolKids" />
-        <h1>Welcome to the SchoolKids Learning Platform!</h1>
+        <img src="Images/forumpage.png" alt="SchoolKids" />
+        <h1>Share Knowledge and Learn Together</h1>
         <p>Join forum discussions to share and learn about your kids together.</p>
     </div>
 
