--- a/content.html
+++ b/content.html
@@ -47,26 +47,24 @@
             color: white;
         }
         .header {
-            background-color: #1d2431;
-            color: #ffffff;
-            padding: 20px;
-            margin-bottom: 30px;
+            background-color: #360F3E;
+            color: white;
+            padding: 20px 30px; 
         }
         .header h1 {
-            font-size: 50px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            font-family: "Kiddos";
             text-align: left;
         }
         .header p {
-            font-size: 25px;
-            margin-bottom: 10px;
+            font-size: 23px;
             text-align: left;
-        }
+        }   
+
         .header img {
-            max-width: 150px;
+            float: left;
+            max-width: 200px; 
             height: auto;
-            margin-right: 30px;
-            margin-left: 380px;
         }
         .section {
             margin: 20px auto;
@@ -144,7 +142,7 @@
     </div>
 
     <div class="header">
-        <img src="Images/content.jpg" alt="SchoolKids" />
+        <img src="Images/contentpage.png" alt="SchoolKids" />
         <h1>Stay Informed with Us</h1>
         <p>Get free access to the latest content across diverse topics</p>
     </div>
