--- a/resources.html
+++ b/resources.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Link | Kids e-Learning </title>
+    <title>Book Link | Kids e-Learning</title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-
     <link rel="icon" href="Images/weblogo.jpg" type="image/jpg">
 
     <style>
@@ -28,7 +26,7 @@
             background-size: 7%;
             position: sticky;
             top: 0;
-            z-index: 1000; 
+            z-index: 1000;
         }
         #navbar a {
             float: left;
@@ -48,23 +46,24 @@
             color: white;
         }
         .header {
-            background-color: #4CAF50;
-            color: #ffffff;
-            padding: 20px;
-            margin-bottom: 30px;
+            background-color: #360F3E;
+            color: white;
+            padding: 20px 30px; 
         }
         .header h1 {
-            font-size: 50px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            font-family: "Kiddos";
+            text-align: left;
         }
         .header p {
-            font-size: 25px;
-            margin-bottom: 10px;
-        }
+            font-size: 23px;
+            text-align: left;
+        }   
+
         .header img {
-            max-width: 10%;
+            float: left;
+            max-width: 200px; 
             height: auto;
-            margin-bottom: 20px;
         }
         .search-container {
             margin: 20px auto;
@@ -129,6 +128,13 @@
             font-size: 18px;
             font-weight: bold;
         }
+        .no-results {
+            display: none;
+            margin-top: 20px;
+            color: red;
+            font-size: 18px;
+            font-weight: bold;
+        }
         .footer {
             text-align: center;
             margin-top: 20px;
@@ -146,51 +152,82 @@
         <a class="active" href="resources.html">Book Link</a>
     </div>
 
-<div class="header">
-    <img src="Images/kids1.png" alt="SchoolKids" />
-    <h1>Welcome to the SchoolKids Learning Platform!</h1>
-    <p>Explore learning resources for more in-depth information.</p>
-</div>
-
-<div class="search-container">
-    <input type="text" id="searchInput" placeholder="Search for resources...">
-    <button onclick="searchLinks()">Search</button>
-</div>
-
-<div class="book-links">
-    <h2>Book Links</h2>
-
-    <!-- Example book link items -->
-    <div class="link-container">
-        <a href="https://www.nasa.gov/topics/solarsystem/index.html" target="_blank">NASA Solar System Exploration</a>
+    <div class="header">
+        <img src="Images/bookpage.png" alt="SchoolKids" />
+        <h1>Explore Recommended Reading</h1>
+        <p>Explore learning resources for more in-depth information.</p>
     </div>
-    <div class="link-container">
-        <a href="https://www.worldwildlife.org/habitats" target="_blank">World Wildlife Fund - Habitats</a>
+
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Search for resources...">
+        <button onclick="searchLinks()">Search</button>
     </div>
-    <div class="link-container">
-        <a href="https://www.history.com/topics/dinosaurs" target="_blank">History - Dinosaurs</a>
+
+    <div class="book-links">
+        <h2>Book Links</h2>
+
+        <!-- book link items -->
+        <div class="link-container">
+            <a href="https://www.nasa.gov/topics/solarsystem/index.html" target="_blank">NASA Solar System Exploration</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.worldwildlife.org/habitats" target="_blank">World Wildlife Fund - Habitats</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.history.com/topics/dinosaurs" target="_blank">History - Dinosaurs</a>
+        </div>
+        <div class="link-container">
+            <a href="https://kids.britannica.com/students/article/planets/627338" target="_blank">Britannica Kids - Planets</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.kids.nationalgeographic.com/animals/" target="_blank">National Geographic Kids - Animals</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.earthwonders.org/habitats/" target="_blank">Earth Wonders - Habitats</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.dkfindout.com/us/space/solar-system/" target="_blank">DK Find Out - Solar System</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.encyclopedia.com/science-and-technology/astronomy-and-space-exploration/astronomy-general/space-exploration" target="_blank">Encyclopedia.com - Space Exploration</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.timeforkids.com/animal-pdi/" target="_blank">TIME for Kids - Animal Database</a>
+        </div>
+        <div class="link-container">
+            <a href="https://www.ducksters.com/history/" target="_blank">Ducksters - History</a>
+        </div>
+        <div id="noResults" class="no-results">No results found.</div>
     </div>
-</div>
 
-<div class="footer">
-    <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
-</div>
+    <div class="footer">
+        <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
+    </div>
 
-<script>
-    function searchLinks() {
-        var input = document.getElementById('searchInput').value.toLowerCase();
-        var linkContainers = document.querySelectorAll('.link-container');
+    <script>
+        function searchLinks() {
+            var input = document.getElementById('searchInput').value.toLowerCase();
+            var linkContainers = document.querySelectorAll('.link-container');
+            var noResults = document.getElementById('noResults');
+            var found = false;
 
-        linkContainers.forEach(function(container) {
-            var linkText = container.textContent.toLowerCase();
-            if (linkText.includes(input)) {
-                container.style.display = '';
+            linkContainers.forEach(function(container) {
+                var linkText = container.textContent.toLowerCase();
+                if (linkText.includes(input)) {
+                    container.style.display = '';
+                    found = true;
+                } else {
+                    container.style.display = 'none';
+                }
+            });
+
+            if (found) {
+                noResults.style.display = 'none';
             } else {
-                container.style.display = 'none';
+                noResults.style.display = 'block';
             }
-        });
-    }
-</script>
+        }
+    </script>
 
 </body>
 </html>
