--- a/forum.html
+++ b/forum.html
@@ -87,7 +87,8 @@
             margin: 20px auto;
             max-width: 800px;
             padding: 20px;
-            background: white;
+            background: #000;
+            color: #fff;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
             text-align: left;
@@ -105,9 +106,12 @@
             border-radius: 8px;
             font-size: 1em;
             resize: vertical;
+            font-family: "Kiddos";
+            background-color: #000;
+            color: #fff;
         }
         .submit-button {
-            background-color: #4CAF50;
+            background-color: #000;
             color: white;
             padding: 15px 32px;
             text-align: center;
@@ -122,8 +126,7 @@
             box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
         }
         .submit-button:hover {
-            background-color: #e2d80d;
-            color: #ffffff;
+            background-color: #333;
         }
         .opinion-container {
             text-align: left;
