--- a/content2.html
+++ b/content2.html
@@ -70,7 +70,7 @@
             margin: 20px auto;
             padding: 20px;
             max-width: 800px;
-            background-color: #1d2431;
+            background-color: rgba(107, 23, 79, 0.808);
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
@@ -91,8 +91,8 @@
             margin-top: 20px;
         }
         .big-button {
-            background-color: #2d22d494;
-            color: white;
+            background-color: #360F3E;
+            color: #F2CA70;
             padding: 10px 20px;
             text-align: center;
             text-decoration: none;
@@ -105,20 +105,21 @@
             box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
         }
         .big-button:hover {
-            background-color: #000000;
+            background-color: #F2CA70;
             color: #ffffff;
         }
         .content-item {
             margin: 20px auto;
             max-width: 600px;
             padding: 20px;
-            background: #0324e07e;
+            background: #F2CA70;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
             text-align: left;
         }
         .content-item h3 {
-            color: rgb(255, 255, 255);
+            color: #360F3E;
+            text-align: center;
         }
         .content-item p {
             margin: 10px 0;
@@ -134,8 +135,8 @@
             margin-top: 20px;
         }
         .back-button a {
-            background-color: #2d22d494;
-            color: white;
+            background-color: #360F3E;
+            color: #F2CA70;
             padding: 10px 20px;
             text-decoration: none;
             font-size: 20px;
@@ -143,7 +144,7 @@
             transition: background-color 0.3s, color 0.3s;
         }
         .back-button a:hover {
-            background-color: #000000;
+            background-color: #F2CA70;
             color: #ffffff;
         }
         .suggestions {
