--- a/resources.html
+++ b/resources.html
@@ -80,11 +80,11 @@
             width: 80%;
             padding: 10px;
             font-size: 16px;
-            border: 1px solid #4CAF50;
+            border: 1px solid #360F3E;
             border-radius: 8px;
         }
         .search-container button {
-            background-color: #4CAF50;
+            background-color: #360F3E;
             color: white;
             padding: 10px 20px;
             font-size: 16px;
@@ -107,14 +107,10 @@
             border-radius: 8px;
             text-align: left;
         }
-        .book-links h2 {
-            text-align: center;
-            color: #4CAF50;
-        }
         .link-container {
             margin: 15px 0;
             padding: 15px;
-            background: #4caf50;
+            background: rgba(107, 23, 79, 0.808);
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             transition: transform 0.3s;
@@ -136,10 +132,11 @@
             font-weight: bold;
         }
         .footer {
+            background-color: #1CC2CD;
+            color: #fff;
+            padding: 20px;
             text-align: center;
-            margin-top: 20px;
             font-size: 15px;
-            color: #eae9e9;
         }
     </style>
 </head>
@@ -164,7 +161,6 @@
     </div>
 
     <div class="book-links">
-        <h2>Book Links</h2>
 
         <!-- book link items -->
         <div class="link-container">
