--- a/index1.html
+++ b/index1.html
@@ -58,7 +58,7 @@
             color: black;
         }
         #navbar a.active {
-            background-color: #1CC2CD;
+            background-color: #360F3E;
             color: white;
         }
         .button-container {
