--- a/content.html
+++ b/content.html
@@ -43,7 +43,7 @@
             color: black;
         }
         #navbar a.active {
-            background-color: #1CC2CD;
+            background-color: #360F3E;
             color: white;
         }
         .header {
