--- a/content2.html
+++ b/content2.html
@@ -43,7 +43,7 @@
             color: black;
         }
         #navbar a.active {
-            background-color: #1CC2CD;
+            background-color: #360F3E;
             color: white;
         }
         .header {
@@ -153,8 +153,8 @@
             right: 0;
             width: 250px;
             padding: 20px;
-            background-color: #71757a;
-            color: white;
+            background-color: #F2CA70;
+            color: #360F3E;
             border-radius: 8px 0 0 8px;
             box-shadow: -4px 0 8px rgba(0,0,0,0.1);
         }
@@ -172,7 +172,7 @@
             margin: 10px 0;
         }
         .suggestions a {
-            color: #1CC2CD;
+            color: white;
             text-decoration: none;
         }
         .suggestions a:hover {
