--- a/quiz.html
+++ b/quiz.html
@@ -18,8 +18,8 @@
         right: 0;
         width: 250px;
         padding: 20px;
-        background-color: #71757a;
-        color: rgb(240, 169, 64);
+        background-color: #F2CA70;
+        color: #360F3E;
         border-radius: 8px 0 0 8px;
         box-shadow: -4px 0 8px rgba(0,0,0,0.1);
     }
@@ -37,7 +37,7 @@
         margin: 10px 0;
     }
     .suggestions a {
-        color: #ffffff;
+        color: white;
         text-decoration: none;
     }
     .suggestions a:hover {
@@ -46,8 +46,8 @@
 </style>
 
 <div id="navbar">
-    <a class="active" href="index1.html">Home</a>
-    <a href="quiz.html">Quizzes</a>
+    <a href="index1.html">Home</a>
+    <a class="active" href="quiz.html">Quizzes</a>
     <a href="forum.html">Forum Discussion</a>
     <a href="content.html">Content Sharing</a>
     <a href="resources.html">Book Link</a>
