--- a/resources.html
+++ b/resources.html
@@ -42,7 +42,7 @@
             color: black;
         }
         #navbar a.active {
-            background-color: #1CC2CD;
+            background-color: #360F3E;
             color: white;
         }
         .header {
