--- a/resources.html
+++ b/resources.html
@@ -168,7 +168,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2024 SchoolKids Learning Platform. All rights reserved.</p>
+        <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
     </div>
 
     <script>
