--- a/forum.html
+++ b/forum.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="index.html">Home</a>
+        <a href="index1.html">Home</a>
         <a href="quiz.html">Quizzes</a>
         <a class="active" href="forum.html">Forum Discussion</a>
         <a href="content.html">Content Sharing</a>
