Update navigation bar

--- a/certificate.html
+++ b/certificate.html
@@ -22,7 +22,7 @@
         }
         
         #navbar a {
-            float: left;
+            float: right;
             display: block;
             color: #0e0a0a;
             font-size: 17px;
