--- a/content.html
+++ b/content.html
@@ -30,7 +30,7 @@
             z-index: 1000; 
         }
         #navbar a {
-            float: left;
+            float: right;
             display: block;
             color: #f2f2f2;
             text-align: center;
@@ -134,11 +134,11 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="index1.html">Home</a>
-        <a href="quiz.html">Quizzes</a>
-        <a href="forum.html">Forum Discussion</a>
-        <a class="active" href="content.html">Content Sharing</a>
         <a href="resources.html">Book Link</a>
+        <a class="active" href="content.html">Content Sharing</a>
+        <a href="forum.html">Forum Discussion</a>
+        <a href="quiz.html">Quizzes</a>
+        <a href="index1.html">Home</a> 
     </div>
 
     <div class="header">
