--- a/index1.html
+++ b/index1.html
@@ -42,10 +42,11 @@
             background-size: 7%;
             position: sticky;
             top: 0;
-            z-index: 1000; 
+            z-index: 1000;
+         
         }
         #navbar a {
-            float: left;
+            float: right;
             display: block;
             color: #f2f2f2;
             text-align: center;
@@ -173,11 +174,11 @@
 <body>
     
 <div id="navbar">
-    <a class="active" href="index1.html">Home</a>
-    <a href="quiz.html">Quizzes</a>
-    <a href="forum.html">Forum Discussion</a>
-    <a href="content.html">Content Sharing</a>
     <a href="resources.html">Book Link</a>
+    <a href="content.html">Content Sharing</a>
+    <a href="forum.html">Forum Discussion</a>
+    <a href="quiz.html">Quizzes</a>
+    <a class="active" href="index1.html">Home</a>
 </div>
 
 <div class="header">
