--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
             z-index: 1000;
         }
         #navbar a {
-            float: left;
+            float: right;
             display: block;
             color: #f2f2f2;
             text-align: center;
@@ -141,11 +141,11 @@
 </head>
 <body>
     <div id="navbar">
-        <a href="index1.html">Home</a>
-        <a href="quiz.html">Quizzes</a>
-        <a href="forum.html">Forum Discussion</a>
-        <a href="content.html">Content Sharing</a>
         <a class="active" href="resources.html">Book Link</a>
+        <a href="content.html">Content Sharing</a>
+        <a href="forum.html">Forum Discussion</a>
+        <a href="quiz.html">Quizzes</a>
+        <a href="index1.html">Home</a>
     </div>
 
     <div class="header">
